# connect4-ai

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindSFML.cmake
include/game_logic/: Board.hpp  Coord.hpp
include/game_logic/util/: TranspositionTable.hpp
include/player/: AIPlayer.hpp  HumanPlayer.hpp  MinimaxAI.hpp  Player.hpp  PlayerColor.hpp
include/render/: Engine.hpp
src/: main.cpp
src/game_logic/: Board.cpp  Coord.cpp
src/game_logic/util/: TranspositionTable.cpp
src/player/: MinimaxAI.cpp  Player.cpp
src/render/: Engine.cpp
